--- a/join/index.html
+++ b/join/index.html
@@ -9,8 +9,12 @@
     <script src="/static/js/script.js" defer></script>
     <style>
         #guide {
-            text-align: center; /* Nur den Text mittig ausrichten */
+            text-align: center;
         }
+        ol {
+    list-style: none;
+    padding-left: 0;
+}
     </style>
 </head>
 
