--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@
         document.getElementById("copy-ip-btn").addEventListener("click", function () {
             const serverIP = "blockattack.fun";
             navigator.clipboard.writeText(serverIP).then(function () {
-                alert("Server IP wurde kopiert!\nDer Port für Bedrock ist 25515\nViel Spaß 😃🥰");
+                alert("Server IP wurde kopiert!\nDer Port für Bedrock ist 25515\nViel Spaß 😃");
             }).catch(function (err) {
                 console.error("Fehler beim Kopieren der IP: ", err);
             });
@@ -36,6 +36,7 @@
                         Info</a></li>
                 <li><a href="/news.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Neuigkeiten</a></li>
                                 <li><a href="/guide.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Beitrittsguide</a></li>
+                                <li><a href="/bilder.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Bildergalerie</a></li>
             </ul>
         </nav>
         <div>
@@ -77,6 +78,12 @@
             <div class="team-member">
                 <img src="/kraftwerk.jpg" alt="Kraftwerk">
                 <h3>AtomKraftwerk42</h3>
+                <p>Leitung</p>
+                <p>Teil der Leitung.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://revivemii.xyz/IMG_0224.JPG" alt="TheErrorExe">
+                <h3>TheErrorExe</h3>
                 <p>Leitung</p>
                 <p>Teil der Leitung.</p>
             </div>
