--- a/server.html
+++ b/server.html
@@ -53,6 +53,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
                         Info</a></li>
                 <li><a href="/news.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Neuigkeiten</a></li>
                                 <li><a href="/guide.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Beitrittsguide</a></li>
+                                <li><a href="/bilder.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Bildergalerie</a></li>
             </ul>
         </nav>
         <div>
