--- a/bilder.html
+++ b/bilder.html
@@ -92,6 +92,7 @@
             <img src="/galerie-img/5.png" alt="Bild 4" onclick="openModal(this.src)">
             <img src="/galerie-img/6.png" alt="Bild 4" onclick="openModal(this.src)">
             <img src="/galerie-img/7.png" alt="Bild 4" onclick="openModal(this.src)">
+            <img src="/galerie-img/8.png" alt="Bild 4" onclick="openModal(this.src)">
         </div>
     </section>
     <div class="modal" id="modal" onclick="closeModal()">
