remove footer on galerie

--- a/bilder.html
+++ b/bilder.html
@@ -131,7 +131,7 @@
         <img id="modal-img">
     </div>
 
-    <footer>
+    <!-- footer>
         <p>&copy; BlockAttack 2025</p>
         <p>Gehostet auf <a href="https://mine-server.org" target="_blank" style="color: inherit; text-decoration: inherit;">mine-server.org</a></p>
         <p>Website von <a href="https://errexe.xyz" target="_blank" style="color: inherit; text-decoration: inherit;">TheErrorExe</a></p>
@@ -139,7 +139,7 @@
         <br>
         <a href="/privacy.html" style="display: inline;">Privacy</a>
         <p style="display: inline;"> | </p><a href="/terms.html" style="display: inline;">Terms of Service</a>
-    </footer>
+    </footer> -->
 
     <script>
         function openModal(src) {
