--- a/server.html
+++ b/server.html
@@ -20,6 +20,17 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
 <html lang="de">
 
 <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QWEVVLV9Q1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QWEVVLV9Q1');
+</script>
+
     <script>
         document.getElementById("copy-ip-btn").addEventListener("click", function () {
             const serverIP = "blockattack.fun";
