affiliate link von mifo

--- a/server.html
+++ b/server.html
@@ -149,7 +149,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
 
     <footer>
         <p>&copy; BlockAttack 2025</p>
-        <p>Gehostet auf <a href="https://mine-server.org" target="_blank"
+        <p>Gehostet auf <a href="https://billing.mine-server.net/?ref=DRMIFO" target="_blank"
                 style="color: inherit; text-decoration: inherit;">mine-server.org</a></p>
         <p>Website von <a href="https://errexe.xyz" target="_blank"
                 style="color: inherit; text-decoration: inherit;">TheErrorExe</a></p>
