--- a/index.html
+++ b/index.html
@@ -280,12 +280,14 @@ loadNews();
             style="border: none; width: 100%; height: 600px; max-width: 100%; margin-left: auto; margin-right: auto;">
         </iframe>
     </section>
+    <section style="text-align: center;">
 
+    </section>
     <br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer>
         <p>&copy; BlockAttack 2025</p>
-        <p>Gehostet auf <a href="https://mine-server.org" target="_blank"
+        <p>Gehostet auf <a href="https://billing.mine-server.net/?ref=DRMIFO" target="_blank"
                 style="color: inherit; text-decoration: inherit;">mine-server.org</a></p>
         <p>Website von <a href="https://errexe.xyz" target="_blank"
                 style="color: inherit; text-decoration: inherit;">TheErrorExe</a></p>
