--- a/join/index.html
+++ b/join/index.html
@@ -95,7 +95,7 @@
 <br><br><br><br><br><br>
     <footer>
         <p>&copy; BlockAttack 2025</p>
-        <p>Gehostet auf <a href="https://mine-server.org" target="_blank" style="color: inherit; text-decoration: inherit;">mine-server.org</a></p>
+        <p>Gehostet auf <a href="https://billing.mine-server.net/?ref=DRMIFO" target="_blank" style="color: inherit; text-decoration: inherit;">mine-server.org</a></p>
         <p>Website von <a href="https://errexe.xyz" target="_blank" style="color: inherit; text-decoration: inherit;">TheErrorExe</a></p>
         <p style="display: inline;"> und <a href="https://github.com/GomorrhaDev" target="_blank" style="color: inherit; text-decoration: inherit; display: inline;">GomorrhaDev</a></p>
         <br>
