--- a/bilder.html
+++ b/bilder.html
@@ -122,6 +122,7 @@
 
     <section id="galerie">
         <h1 style="text-align: center; color: #00d8ff;">Bildergalerie von Blockattack</h1>
+        <p>Klicke auf ein Bild um Vollbild zu aktivieren</p>
         <div class="gallery">
             <img src="/galerie-img/1.png" alt="Bild 1" onclick="openModal(this.src)">
             <img src="/galerie-img/2.png" alt="Bild 2" onclick="openModal(this.src)">
