--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blockattack - Minecraft Server</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="./static/css/style.css">
     <script src="/static/js/script.js" defer></script>
 </head>
 
@@ -281,7 +281,11 @@ loadNews();
         </iframe>
     </section>
     <section style="text-align: center;">
-
+    </header>
+    <h1>Unser Partner:</h1>
+            <a href="https://billing.mine-server.net/?ref=DRMIFO">
+        <img src="./mine-server.gif" width="728" height="90">
+        </a>
     </section>
     <br><br><br><br><br><br><br><br><br><br><br><br>
 
