--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Über Blockattack</title>
     <link rel="stylesheet" href="/static/css/style.css">
+  <script src="/static/js/script.js"></script>
 </head>
 
 <body>
