--- a/bilder.html
+++ b/bilder.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blockattack - Bildergalerie</title>
     <link rel="stylesheet" href="https://www.blockattack.fun/static/css/style.css">
+  <script src="/static/js/script.js"></script>
     <script src="/static/js/script.js" defer></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
