--- a/news.html
+++ b/news.html
@@ -5,6 +5,7 @@
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QWEVVLV9Q1"></script>
+  <script src="/static/js/script.js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
