--- a/server.html
+++ b/server.html
@@ -23,6 +23,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QWEVVLV9Q1"></script>
+  <script src="/static/js/script.js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
