--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
                 <li><a href="/news.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Neuigkeiten</a></li>
                                 <li><a href="/guide.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Beitrittsguide</a></li>
                                 <li><a href="/bilder.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Bildergalerie</a></li>
+                                <li><a href="/wiki" style="text-decoration: none; color: #fff; margin-left: 20px;">Wiki</a></li>
+
             </ul>
         </nav>
         <div>
