--- a/join/index.html
+++ b/join/index.html
@@ -43,6 +43,8 @@
                 <li><a href="/news.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Neuigkeiten</a></li>
                 <li><a href="/guide.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Beitrittsguide</a></li>
                 <li><a href="/bilder.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Bildergalerie</a></li>
+                <li><a href="/wiki" style="text-decoration: none; color: #fff; margin-left: 20px;">Wiki</a></li>
+
 
             </ul>
         </nav>
