--- a/wiki/index.html
+++ b/wiki/index.html
@@ -155,7 +155,7 @@
                 <li><a href="#beitritt">Wie trete ich dem Server bei?</a></li>
                 <li><a href="#voicechat">Wie benutze ich Voice Chat?</a></li>
                 <li><a href="#wirtschaft">Wirtschaftssystem erklärt</a></li>
-                <li><a href="#pvp">PvP-Regeln und Tipps</a></li>
+                <li><a href="#pvp">PvP-Welt</a></li>
             </ul>
         </div>
         
