--- a/wiki/index.html
+++ b/wiki/index.html
@@ -170,7 +170,7 @@
         <ul>
         <li><a href="#" onclick="showIframe('https://www.youtube.com/embed/9EOXBiaJlOA')">Lunarclient</a></li>
         <li><a href="#" onclick="showIframe('https://www.youtube.com/watch?v=hyT8qcHSVP0')" >Feather</a></li>
-        <li><a href="#" onclick="/wiki/voicechat/vanilla.html">Normaler Minecraft Launcher (ohne Fabric oder Forge, einfach Vanilla)</a></li>
+        <li><a href="/wiki/voicechat/vanilla.html">Normaler Minecraft Launcher (ohne Fabric oder Forge, einfach Vanilla)</a></li>
         <li><a href="/wiki/voicechat/vanilla.html#simple-voice-chat">Fabric</a></li>
         <li><a href="/wiki/voicechat/vanilla.html#simple-voice-chat">Forge wähle statt fabric forge) (für Curseforge klicke auf Lunarclient oben)</a></li>
         <li><a href="#" onclick="newtab('https://www.curseforge.com/minecraft/mc-mods/simple-voice-chat')">Ich weiß wie man Mods mit .jar Dateien installiert, gib mir einfach den Download</a></li>
