--- a/drmifo/index.html
+++ b/drmifo/index.html
@@ -6,6 +6,7 @@
     <title>Dr Mifo - Minecraft Content Creator</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
+    <link rel="icon" href="https://blockattack.fun/drmifo.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         body {
