--- a/wiki/index.html
+++ b/wiki/index.html
@@ -122,6 +122,15 @@
             menu.style.display = menu.style.display === "block" ? "none" : "block";
         }
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QWEVVLV9Q1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QWEVVLV9Q1');
+</script>
 </head>
 
 <body>
