--- a/wiki/voicechat/index.html
+++ b/wiki/voicechat/index.html
@@ -1,3 +1,12 @@
 <script>
     window.location.href = "/wiki/index.html#voicechat";
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QWEVVLV9Q1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QWEVVLV9Q1');
+</script>
