--- a/drmifo/index.html
+++ b/drmifo/index.html
@@ -131,7 +131,7 @@
         <section class="card">
             <h2>Letzte Videos</h2>
             <p>Hier findest du die neuesten Inhalte:</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/1CAYvj7jvrk?si=b5QNFUjOKKcRgY_g&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/1CAYvj7jvrk?si=b5QNFUjOKKcRgY_g&amp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
         <section class="card">
             <h2>Über Dr Mifo</h2>
