streamingplan von dr mefo

--- a/drmifo/index.html
+++ b/drmifo/index.html
@@ -115,7 +115,7 @@
                 <i class="fab fa-twitch"></i> Live auf Twitch
             </a>
         </section>
-        <section class="card">
+        <section class="card" id="streamingplan">
             <h2>Streaming-Plan</h2>
             <div class="calendar">
                 <table id="scheduleTable">
