--- a/about.html
+++ b/about.html
@@ -67,6 +67,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
                                 <li><a href="/guide.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Beitrittsguide</a></li>
                                 <li><a href="/bilder.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Bildergalerie</a></li>
                                 <li><a href="/wiki" style="text-decoration: none; color: #fff; margin-left: 20px;">Wiki</a></li>
+                                <li><a href="/drmifo#streamingplan" style="text-decoration: none; color: #fff; margin-left: 20px;">Mifos Streamingplan</a></li>
 
             </ul>
         </nav>
