--- a/team.html
+++ b/team.html
@@ -49,7 +49,7 @@
                                 <li><a href="/guide.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Beitrittsguide</a></li>
                                 <li><a href="/bilder.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Bildergalerie</a></li>
                                 <li><a href="/wiki" style="text-decoration: none; color: #fff; margin-left: 20px;">Wiki</a></li>
-
+                                <li><a href="/drmifo#streamingplan" style="text-decoration: none; color: #fff; margin-left: 20px;">Mifos Streamingplan</a></li>
             </ul>
         </nav>
         <div>
