--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     <script>
         const serverAddress = 'blockattack.fun';
 
-        const apiUrl = `https://api.mcstatus.io/v2/us/java/${serverAddress}`;
+        const apiUrl = `https://api.mcstatus.io/v2/status/java/${serverAddress}`;
 
         fetch(apiUrl)
             .then(response => response.json())
