--- a/team.html
+++ b/team.html
@@ -94,6 +94,12 @@
                 <p>Leitung</p>
                 <p>Teil der Leitung.</p>
             </div>
+                <div class="team-member">
+                <img src="/Sensei_Fluff.png" alt="Sensei_Fluff">
+                <h3>Sensei_Fluff</h3>
+                <p>Supporter</p>
+                <p>Teil der Supporter.</p>
+            </div>
         </div>
         <br><br><br><br><br><br>
 
