--- a/team.html
+++ b/team.html
@@ -98,7 +98,7 @@
                 <img src="/Sensei_Fluff.png" alt="Sensei_Fluff">
                 <h3>Sensei_Fluff</h3>
                 <p>Supporter</p>
-                <p>Teil der Supporter.</p>
+                <p>Ein Supporter.</p>
             </div>
         </div>
         <br><br><br><br><br><br>
