Mifos Minecraft skin

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@ THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR I
 <!--
 
 This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and will be a Copyright Holder of this Software.
-
+ integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+ integrity="sha256-NGC9JEuTWN4GhTj091wctgjzftr+8WNDmw0H8J5YPYE=" 
 -->
 <!DOCTYPE html>
 <html lang="de">
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/94/three.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/gh/InventivetalentDev/MineRender@1.4.6/dist/skin.min.js"></script>
 <head>
 
 <!-- Google tag (gtag.js) -->
@@ -177,6 +180,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
                 href="https://www.youtube.com/@DrMifo">Dr. Mifo auf YouTube</a>
                 <a href="/drmifo/#streamingplan">Streamingplan</a>
         </div>
+<iframe src="/mifoskin.html" frameborder="0" width="300" height="400"></iframe>
     </section>
 
     <script>
