--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
                 href="https://www.youtube.com/@DrMifo">Dr. Mifo auf YouTube</a>
                 <a href="/drmifo/#streamingplan">Streamingplan</a>
         </div>
-<iframe src="/mifoskin.html" frameborder="0" width="300" height="400"></iframe>
+<iframe src="https://blockattack.fun/mifoskin.html" frameborder="0" width="300" height="400"></iframe>
     </section>
 
     <script>
