--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
         <h2>Regelwerk:</h2>
         <iframe
             src="https://docs.google.com/document/d/e/2PACX-1vRjeS7oBU-82XRG8_Y9ljyabfJZYdtK5DYc98NktlVFXRph9iRMukgSvMkd1Kx5Hhy5g4vXRdnjN6Gv/pub?embedded=true"
-            style="border: none; width: 100%; height: 600px; max-width: 100%; margin-left: auto; margin-right: auto;">
+            style="border: none; width: 100%; height: 600px; max-width: 100%; margin-left: auto; margin-right: auto;" sandbox="allow-scripts allow-same-origin allow-forms">
         </iframe>
     </section>
     <section style="text-align: center;">
