--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     <section id="home" style="text-align: center;">
         <h2>Regelwerk:</h2>
         <iframe
-            src="https://docs.google.com/document/d/e/2PACX-1vRjeS7oBU-82XRG8_Y9ljyabfJZYdtK5DYc98NktlVFXRph9iRMukgSvMkd1Kx5Hhy5g4vXRdnjN6Gv/pub?embedded=true"
+            src="/googledoc.html"
             style="border: none; width: 100%; height: 600px; max-width: 100%; margin-left: auto; margin-right: auto;" sandbox="allow-same-origin allow-forms">
         </iframe>
     </section>
