--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     </section>
     
     <section id="server-status">
-        <h2>Server Status</h2>
+        <h2>Server Status (Wir sind aktuell im Lockdown Modus, Es wird Offline angezeigt, aber es ist online, einfach joinen)</h2>
         <div id="status-message">Lade Serverstatus...</div>
         <div id="server-info" style="display:none;">
             <p id="players-online"><span></span></p>
@@ -161,10 +161,16 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     <iframe src="https://discord.com/widget?id=1220023443391643830&theme=dark" width="350" height="500"
         allowtransparency="true" frameborder="0"></iframe>
     <br>
-    <a href="https://discord.gg/ARDHyKxtpH"
+    <a onclick="alert('Unser Discord Server ist aktuell im Lockdown wegen DDoS Attacken')"
+        style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">
+        Trete dem Discord Server bei (lockdown)
+    </a>
+ <!-- 
+     <a href="https://discord.gg/ARDHyKxtpH"
         style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">
         Trete dem Discord Server bei
     </a>
+-->
 </section>
 
 
