--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
 <script src="https://cdn.jsdelivr.net/gh/InventivetalentDev/MineRender@1.4.6/dist/skin.min.js"></script>
 <head>
 
+
+
+<!-- Hera C2 Wenn du das hier liest, verpiss dich -->
+
+ 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QWEVVLV9Q1"></script>
 <script>
@@ -144,7 +149,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     </section>
     
     <section id="server-status">
-        <h2>Server Status (Wir sind aktuell im Lockdown Modus, Es wird Offline angezeigt, aber es ist online, einfach joinen)</h2>
+        <h2>Server Status</h2>
         <div id="status-message">Lade Serverstatus...</div>
         <div id="server-info" style="display:none;">
             <p id="players-online"><span></span></p>
@@ -161,16 +166,14 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     <iframe src="https://discord.com/widget?id=1220023443391643830&theme=dark" width="350" height="500"
         allowtransparency="true" frameborder="0"></iframe>
     <br>
-    <a onclick="alert('Unser Discord Server ist aktuell im Lockdown wegen DDoS Attacken')"
+ <!--   <a onclick="alert('Unser Discord Server ist aktuell im Lockdown wegen DDoS Attacken')"
         style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">
         Trete dem Discord Server bei (lockdown)
-    </a>
- <!-- 
+    </a> -->
      <a href="https://discord.gg/ARDHyKxtpH"
         style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">
         Trete dem Discord Server bei
     </a>
--->
 </section>
 
 
